Fix mobile view wrap problems. Change some gaps. Change copyright name in footer.

--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    margin: 0;
 }
 
 header, footer {
@@ -32,7 +33,9 @@ button {
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
-    padding: 20px;
+    flex-wrap: wrap;
+    padding-top: 20px;
+    gap: 16px;
 }
 
 .header-logo {
@@ -63,9 +66,10 @@ p.logo {
     width: 80%;
     margin: 0 auto;
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     gap: 28px;
-    padding: 100px 0;
+    padding: 80px 0;
 }
 
 .header-splash {
@@ -92,10 +96,10 @@ p.logo {
 }
 
 .header-img {
-    min-width: 550px;
     min-height: 250px;
     background-color: gray;
     display: flex;
+    flex: 1 1 auto;
     justify-content: center;
     align-items: center;
     margin: 0;
@@ -117,10 +121,12 @@ main {
     color: #1F2937;
     text-align: center;
     padding: 32px 0;
+    margin-top: 50px;
 }
 
 .icons {
     display: flex;
+    flex-wrap: wrap;
     gap: 48px;
     justify-content: center;
 }
@@ -147,6 +153,7 @@ main {
 .quote-back {
     background-color: #E5E7EB;
     min-height: 400px;
+    padding: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -155,9 +162,11 @@ main {
 .quote {
     width: 55%;
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 8px;
 }
 
 .quote-text {
@@ -188,14 +197,16 @@ main {
     border-radius: 12px;
     padding: 50px;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
+    gap: 8px;
 }
 
 .cta {
     display: flex;
     flex-direction: column;
-    gap: 4px;
+    gap: 8px;
     color: white;
 }
 
@@ -221,5 +232,5 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 30px;
+    padding: 20px;
 }
